@@ -2,6 +2,10 @@ GenericSetup Product Changelog
 
   GenericSetup 1.3-beta (unreleased)
 
+    - Extend the ZCatalog import/export mechanism to allow removal of 
+      metadata columns in addition to adding them.
+      (http://www.zope.org/Collectors/CMF/483)
+
     - Made sure we register Acquisition free objects as utilities in the
       components handler.
 
